tests/specs/check/workspace/package_b.out
Check file:///[WILDLINE]/package-b/mod.ts
TS2322 [ERROR]: Type 'number' is not assignable to type 'string'.
const test: string = add(1, 2);
      ~~~~
    at [WILDLINE]

error: Type checking failed.
